Get rid of schema builder, add LINT warnings to builds.